Make changes for given comments
Signed-off-by: Ashish Singh <ssashish@amazon.com>